[package]
name = "payload_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
section = { path = "../mycelial/pipe/section/" }
postgres_connector = { path = "../mycelial/pipe/section/section_impls/postgres_connector/" }
stub = { path = "../mycelial/pipe/section/section_impls/stub/" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
