[package]
name = "payload_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1.38.0", features = ["full"] }
section = { git="https://github.com/mycelial/mycelial", tag="v0.8.5" }
postgres_connector = { git="https://github.com/mycelial/mycelial", tag="v0.8.5" }
stub = { git="https://github.com/mycelial/mycelial", tag="v0.8.5" }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
ratatui = { version = "0.26.3", features = ["crossterm"] }
crossterm = "0.27.0"
